# poetry-template

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  pyproject.toml  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.md
tests/: conftest.py
