[tool.poetry]
name = "Poetry-template"
version = "0.1.0"
description = "Poetry template"
readme = "README.md"
authors = ["Hikaru Yoshizawa <g1e2n04@gmail.com>"]
license = "GPL-3.0-or-later"
repository = ""
homepage = ""
keywords = []
include = []
exclude = [
  "bin",
  "configs",
  "examples",
  "docker-compose",
  "docs",
  "test_files",
  "docker",
  "misc",
  "tests",
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts

[tool.poetry.dependencies]
python = "^3.8,<3.9"
python-dotenv = "^0.19.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
bandit = "^1.7.0"
mypy = "^0.910"
pytest = "^6.2.4"
tox = "^3.24.1"
pre-commit = "^2.14.0"
pylint = "^2.9.6"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
bump2version = "^1.0.1"
pytest-cov = "^2.12.1"
flake8-isort = "^4.0.0"
pytest-timeout = "^1.4.2"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.12.0"
myst-parser = "^0.15.2"
linkify-it-py = "^1.0.2"
nbsphinx = "^0.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX --tb=short --strict-markers --doctest-modules"
markers = [
  "smoke: Run the smoke test",
]
timeout = 300

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
'''

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
